<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/m3_appbar_expanded_title_margin_horizontal"
            android:paddingVertical="?dialogPreferredPadding">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="?dialogPreferredPadding">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SSID" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ssid"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BSSID" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bssid"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/IP" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ip"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gateway" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gateway"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/netmask" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/netmask"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="?dialogPreferredPadding">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/obtain"
                            style="?borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/obtain"
                            android:textAlignment="center" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/save"
                            style="?borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>