<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/m3_appbar_expanded_title_margin_horizontal"
            android:paddingVertical="?dialogPreferredPadding">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/status"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="?colorPrimary"
                android:outlineSpotShadowColor="?colorPrimary"
                android:stateListAnimator="@null"
                app:cardBackgroundColor="?colorPrimary"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="?dialogPreferredPadding">

                    <ImageView
                        android:id="@+id/status_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/ic_check_circle_32"
                        app:tint="?colorOnPrimary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_toEndOf="@id/status_icon"
                        android:text="@string/app_name"
                        android:textAppearance="?textAppearanceTitleMedium"
                        android:textColor="?colorOnPrimary"
                        android:textSize="24sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="?dialogPreferredPadding">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SSID" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/ssid"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BSSID" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/bssid"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/IP" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/ip"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gateway" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/gateway"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/netmask" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/netmask"
                        style="@style/Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>